# massive

./: .env  Cargo.toml  README.md  database.env  docker-compose.yml
migrations/2020-09-03-053615_create_recipes/: down.sql  up.sql
migrations/2020-09-10-025542_add_ingredient_model/: down.sql  up.sql
migrations/2020-09-10-031952_add_recipe_ingredient/: down.sql  up.sql
src/: lib.rs  main.rs  router.rs  schema.rs
src/graphql/: error.rs  juniper_hyper.rs  mod.rs
src/graphql/context/: mod.rs
src/graphql/mutation/: mod.rs
src/graphql/query/: ingredient.rs  mod.rs  recipe.rs
src/model/: ingredient.rs  mod.rs  recipe.rs  recipe_ingredient.rs
