[package]
name = "massive"
version = "0.1.0"
authors = ["Scott Rabin <scott@scottrabin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
hyper = "0.13"
juniper = "0.14"
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
